--- a/src/Style.css
+++ b/src/Style.css
@@ -71,7 +71,7 @@ a{
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-  background-color:#006aff;
+  background-color:#00C2FF;
 }
 .card img{
     width: 100%;
@@ -89,7 +89,7 @@ a{
     padding: 10px 10px;
     border-radius: 10px;
     background-color: white;
-    color: #006aff;
+    color: #00C2FF;
     border: none;
 }
 .card p{
